[gd_scene load_steps=35 format=3 uid="uid://qr5sp08gx2wc"]

[ext_resource type="Script" path="res://Scripts/UI-Scripts/win_screen.gd" id="1_44ugv"]
[ext_resource type="Texture2D" uid="uid://35j3auh5iexs" path="res://Assets/Background/HoneyImGnomeStartScreen.png" id="2_umj8y"]
[ext_resource type="StyleBox" uid="uid://b7xahi7kdsa3w" path="res://Assets/Button Style Boxes/button_normal_style.tres" id="3_3pvct"]
[ext_resource type="StyleBox" uid="uid://p2bpv347bfhx" path="res://Assets/Button Style Boxes/button_hover_style.tres" id="4_1ng16"]
[ext_resource type="StyleBox" uid="uid://71tdlgwq8do0" path="res://Assets/Button Style Boxes/button_pressed_style.tres" id="5_esusw"]
[ext_resource type="StyleBox" uid="uid://ddgnumxs1jjum" path="res://Assets/Button Style Boxes/button_focused_style_(empty).tres" id="6_w8vt2"]
[ext_resource type="FontFile" uid="uid://cjaalw0cyveaj" path="res://Assets/Fonts/Halo Dek.ttf" id="7_x0dls"]
[ext_resource type="Texture2D" uid="uid://bltei33p2wmux" path="res://Assets/Honeycomb-v1.png" id="8_qqfn5"]
[ext_resource type="AudioStream" uid="uid://b41gkhigevbdk" path="res://Assets/Sounds/Sound Effects/pick-92276.mp3" id="9_knp2j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kxami"]
atlas = ExtResource("2_umj8y")
region = Rect2(0, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1yim"]
atlas = ExtResource("2_umj8y")
region = Rect2(256, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mia2"]
atlas = ExtResource("2_umj8y")
region = Rect2(512, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_f81g3"]
atlas = ExtResource("2_umj8y")
region = Rect2(768, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeulv"]
atlas = ExtResource("2_umj8y")
region = Rect2(1024, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tfyl"]
atlas = ExtResource("2_umj8y")
region = Rect2(1280, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeb3c"]
atlas = ExtResource("2_umj8y")
region = Rect2(1536, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdjmr"]
atlas = ExtResource("2_umj8y")
region = Rect2(1792, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i3e1"]
atlas = ExtResource("2_umj8y")
region = Rect2(2048, 0, 256, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_at6co"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxami")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1yim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mia2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f81g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeulv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tfyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeb3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdjmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i3e1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0eek3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihvpd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d0574"]
atlas = ExtResource("8_qqfn5")
region = Rect2(16, 12, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlvi4"]
atlas = ExtResource("8_qqfn5")
region = Rect2(80, 12, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev7hl"]
atlas = ExtResource("8_qqfn5")
region = Rect2(144, 12, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0r36"]
atlas = ExtResource("8_qqfn5")
region = Rect2(208, 12, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bitnw"]
atlas = ExtResource("8_qqfn5")
region = Rect2(272, 12, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmewg"]
atlas = ExtResource("8_qqfn5")
region = Rect2(336, 12, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih6w3"]
atlas = ExtResource("8_qqfn5")
region = Rect2(48, 13, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4wy3"]
atlas = ExtResource("8_qqfn5")
region = Rect2(112, 13, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vxrb"]
atlas = ExtResource("8_qqfn5")
region = Rect2(176, 13, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmpwr"]
atlas = ExtResource("8_qqfn5")
region = Rect2(240, 13, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ktri"]
atlas = ExtResource("8_qqfn5")
region = Rect2(304, 13, 16, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0l3i"]
atlas = ExtResource("8_qqfn5")
region = Rect2(368, 13, 16, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_eogcr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0574")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlvi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev7hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0r36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bitnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmewg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih6w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4wy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vxrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmpwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ktri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0l3i")
}],
"loop": true,
"name": &"new_animation",
"speed": 7.0
}]

[node name="Win Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44ugv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1923.0
offset_bottom = 1082.0
color = Color(0.265933, 0.48747, 0.482239, 1)

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(7.5, 7.5)
sprite_frames = SubResource("SpriteFrames_at6co")
autoplay = "default"
frame_progress = 0.74894

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 146.0
offset_top = 62.0
offset_right = 438.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 10

[node name="Play Again" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("3_3pvct")
theme_override_styles/hover = ExtResource("4_1ng16")
theme_override_styles/pressed = ExtResource("5_esusw")
theme_override_styles/focus = ExtResource("6_w8vt2")
text = "Play Again"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("3_3pvct")
theme_override_styles/hover = ExtResource("4_1ng16")
theme_override_styles/pressed = ExtResource("5_esusw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0eek3")
text = "Main Menu
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("3_3pvct")
theme_override_styles/hover = ExtResource("4_1ng16")
theme_override_styles/pressed = ExtResource("5_esusw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ihvpd")
text = "Quit"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -535.0
offset_top = 31.0
offset_right = 357.0
offset_bottom = 399.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 0.705882, 0, 1)
theme_override_colors/font_shadow_color = Color(0.176419, 0.176419, 0.176419, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("7_x0dls")
theme_override_font_sizes/font_size = 60
text = "CONGRATULATIONS
You've Won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(1809, 207)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_eogcr")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.267141
flip_h = true

[node name="Sound Effect Audio Player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_knp2j")

[connection signal="pressed" from="VBoxContainer/Play Again" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
